--- a/extension/css/main.css
+++ b/extension/css/main.css
@@ -7,7 +7,9 @@ body {
     display: flex;
     flex-direction: column;
 }
-
+.login-header {
+    display: flex;
+}
 .login-error {
     color: #f50505;
 }
