--- a/extension/css/home.css
+++ b/extension/css/home.css
@@ -40,23 +40,22 @@ main {
 }
 
 h1 {
+    font-size: 32px;
+    margin: 0;
+    color: #1d2027;
+}
+
+h2 {
     font-size: 22px;
     margin: 0;
     color: #1d2027;
-    margin-bottom: 8px;
-}
-h2 {
-    font-size: 24px;
-    margin: 0;
-    color: #1d2027;
     text-align: left;
-
 }
 
 p {
     font-size: 14px;
     line-height: 20px;
-    color: #666;
+    color: rgb(113 128 150);
     text-align: left;
     margin: 0;
 }
@@ -157,11 +156,11 @@ a:hover{
 .input-wrapper input[type="password"],
 .input-wrapper input[type="text"]{
     width: 100%;
-    padding: 13.5px 8px;
+    padding: 12px 8px;
     font-size: 18px;
     border: 2px solid #ECEFF2;
     background-color: #F5F7F8;
-    border-radius: 12px;
+    border-radius: 5px;
     box-sizing: border-box; /* Ensure padding is included in the width */
     letter-spacing: 0.1em; /* Increase the spacing between characters */
 }
@@ -495,7 +494,7 @@ a:hover{
     width: 100%;
     margin-bottom: 5px;
     font-size: 14px;
-    color: #666;
+    color: rgb(113 128 150);
 }
 
 .input-wrapper {
@@ -535,7 +534,7 @@ a:hover{
 
 .password-checkbox label {
     font-size: 14px;
-    color: #666;
+    color: rgb(113 128 150);
 }
 
 .primary-button {
@@ -546,10 +545,7 @@ a:hover{
     border-radius: 5px;
     cursor: pointer;
     margin: 12px 0;
-}
-
-.primary-button {
-    background-color: #5ba7fc;
+    background-color: #5ba7fc ;
     color: #fff;
 }
 
