--- a/extension/css/main.css
+++ b/extension/css/main.css
@@ -214,7 +214,7 @@ ul {
     align-items: center;
 }
 
-.functionbtn {
+.function-btn {
     width: 42px;
     height: 42px;
     background-color: #5ba7fc;
@@ -227,11 +227,11 @@ ul {
     cursor: pointer;
 }
 
-.functionbtn:hover {
+.function-btn:hover {
     background-color: rgba(91, 167, 252, 0.8);
 }
 
-.functionbtn img {
+.function-btn img {
     width: 42px;
     height: 42px;
 }
@@ -343,4 +343,18 @@ ul {
 
 .account-detail-item.active {
     background-color: rgb(246, 0, 0);
+}
+
+.account-list-area {
+    display: block; /* 或者通过 JavaScript 动态控制显示 */
+    position: fixed; /* 使其固定在视口 */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* 添加半透明背景，使得内容更易于阅读 */
+    z-index: 9999; /* 设置高 z-index 确保在页面最上层 */
+    padding: 20px; /* 可选：增加一些内边距 */
+    box-sizing: border-box;
+    overflow-y: auto; /* 允许内容超出时滚动 */
 }
